--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,6 @@
     {% endblock %}   
     
     <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
