--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,49 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <div class="card-wrapper">
 
-    <h1>Home</h1>
+    <div class="card">
 
+      <h1 class="center">Create an Account</h1>
+
+      <form name="signup_form">
+
+        <label for="name">Name</label>
+        <input type="text" name="name" class="field" required>
+
+        <label for="email">Email</label>
+        <input type="email" name="email" class="field" required>
+
+        <label for="password">Password</label>
+        <input type="password" name="password" class="field" required>
+
+        <p class="error error--hidden"></p>
+        <button type="submit">Sign Up</button>
+      
+      </form>
+      
+    </div>
+
+    <div class="card">
+
+      <h1 class="center">Log In</h1>
+
+      <form name="login_form">
+
+        <label for="email">Email</label>
+        <input type="email" name="email" class="field" required>
+
+        <label for="password">Password</label>
+        <input type="password" name="password" class="field" required>
+
+        <p class="error error--hidden"></p>
+
+        <button type="submit">Sign Up</button>
+      
+      </form>
+      
+    </div>
+  
+  </div>
 {% endblock %}
